hydromel/tests/errors/sem-datatype-as-intf-after-field-expr.mel
#lang hydromel

# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

component C
    x.a = 3
    # ERROR: Expected an interface name
    port x : unsigned(32)
end
